<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_LoggedValues" Id="{97732bce-64c9-4020-bd74-d4a942b13940}">
    <Declaration><![CDATA[TYPE ST_LoggedValues :
STRUCT
	nMotorFluxVoltage : INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>