<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_Simplex_Reset" Id="{a10045cc-1ac7-488e-8b66-47dde6f146f3}">
    <Declaration><![CDATA[TYPE ST_Simplex_Reset :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>